--- a/package.json
+++ b/package.json
@@ -50,14 +50,15 @@
   ],
   "main": "./lib/main",
   "engines": {
-    "node": ">= v0.8.x"
+   "node": "7.6.0",
+    "npm": "4.1.2"
   },
   "dependencies": {
     "lodash": "^4.17.4",
     "safe": "^0.4.2"
   },
   "scripts": {
-    "test": "./test.sh"
+    "//": "test here"
   },
   "optionalDependencies": {
     "bson": "0.2.x"
