--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,11 @@ language: node_js
 node_js:
   - "7.6.0"
 cache: yarn
+services:
+  - mongodb
+before_script:
+  - chmod +x test.sh    
+script:
+  - npm install
+  - ./test.sh --db=mongodb --reporter=spec --quick
+  - ./test.sh --db=tingodb --reporter=spec
