--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ cache: yarn
 services:
   - mongodb
 before_script:
-  - chmod +x test.sh    
+  - chmod +x test.sh
+  - chmod +x test-cov.sh
 script:
   - npm install
   - ./test.sh --db=mongodb --reporter=spec --quick
