--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,7 @@ node_js:
 cache: yarn
 services:
   - mongodb
-before_script:
-  - chmod +x test.sh
-  - chmod +x test-cov.sh
 script:
   - npm install
-  - ./test.sh --db=mongodb --reporter=spec --quick
-  - ./test.sh --db=tingodb --reporter=spec
+  - sh test.sh --db=mongodb --reporter=spec --quick
+  - sh test.sh --db=tingodb --reporter=spec
